[package]
name = "tempura"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
tmp_vk_renderer = { path = "crates/tmp_vk_renderer" }

[dev-dependencies]
raw-window-handle = "0.5"
winit = "0.28.5"

[[example]]
name = "renderer"
path = "examples/renderer/renderer.rs"
