[package]
name = "tempura"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
tmp_vk_renderer = { path = "crates/tmp_vk_renderer", features = ["develop"] }

[dev-dependencies]
raw-window-handle = "0.5"
winit = "0.28.5"
libloading = "0.8"

[[example]]
name = "renderer"
path = "examples/renderer/renderer.rs"
