[package]
name = "tmp_vk_renderer"
version = "0.1.0"
edition = "2021"

[features]
debug = []
develop = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37"
ash-window = "0.12.0"
raw-window-handle = "0.5"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", branch = "master"}
